test/valid/match.art
let _ = match 1 {
    2 => 3,
    4 => 5,
    _ => 6
};
