test/invalid/bind.art
let x = 1;
let x = 2;
let x = 3;
